<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPersonalData"
                android:fontFamily="@font/work_sans_bold"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:paddingTop="15dp"
                android:paddingLeft="12dp"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/work_sans_light"
                android:hint="@string/etName"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/work_sans_light"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="false"
                android:maxLines="7"
                android:hint="@string/etBirthday"/>

            <EditText
                android:id="@+id/etEducation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/work_sans_light"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="false"
                android:maxLines="7"
                android:hint="@string/etSchool"/>

            <EditText
                android:id="@+id/etCareer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/work_sans_light"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:hint="@string/etCareer"/>

            <EditText
                android:id="@+id/etCareer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/work_sans_light"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:hint="@string/etCareer2"/>

            <EditText
                android:id="@+id/etCellphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:fontFamily="@font/work_sans_light"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="false"
                android:maxLines="2"
                android:hint="@string/etPhone"/>

            <EditText
                android:id="@+id/email"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/work_sans_light"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="2"
                android:singleLine="false" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/work_sans_light"
                android:singleLine="true"
                android:hint="@string/etPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvInvolvement"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:fontFamily="@font/work_sans_bold"
                android:paddingTop="10dp"
                android:paddingLeft="12dp"/>

            <EditText
                android:id="@+id/etExperiences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/work_sans_light"
                android:layout_marginRight="10dp"
                android:singleLine="false"
                android:hint="@string/etInvolvementDetails"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvResidence"
                android:fontFamily="@font/work_sans_bold"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:paddingTop="10dp"
                android:paddingLeft="12dp"/>

            <EditText
                android:id="@+id/etCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/work_sans_light"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:hint="@string/etCountry"/>

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/work_sans_light"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:hint="@string/etCity"/>

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:text="@string/btSubmit"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="@font/work_sans_bold"
                android:textColor="#FFF"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/etUserID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textSize="12sp"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>